--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-navigation-stack": "^1.9.4",
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
